[gd_scene load_steps=21 format=3 uid="uid://cv1akcim6mdc5"]

[ext_resource type="Theme" uid="uid://bxysniydt2th7" path="res://checksfinder/ui/themes/checksfinder.tres" id="1_1rejh"]
[ext_resource type="Script" uid="uid://cu5d1k0k8thhx" path="res://checksfinder/game_scene.gd" id="2_5n5vg"]
[ext_resource type="Script" uid="uid://b57bmqqmfng17" path="res://checksfinder/game_grid.gd" id="3_77tm3"]
[ext_resource type="PackedScene" uid="uid://hy1yrayxjela" path="res://checksfinder/VolumeContainer.tscn" id="4_2mk5m"]
[ext_resource type="Texture2D" uid="uid://b10aij180tx2y" path="res://checksfinder/ui/graphics/check_icon.png" id="5_333wg"]
[ext_resource type="Texture2D" uid="uid://c4lf2ly4ort5p" path="res://checksfinder/ui/graphics/completed_check_icon.png" id="6_frkbr"]
[ext_resource type="Texture2D" uid="uid://cn536dxgj7ysk" path="res://checksfinder/ui/graphics/bomb_icon.png" id="7_verhn"]
[ext_resource type="Texture2D" uid="uid://deqoj6m3mihq6" path="res://checksfinder/ui/graphics/height_icon.png" id="8_npbh7"]
[ext_resource type="Texture2D" uid="uid://cmedmorrxk8s0" path="res://checksfinder/ui/graphics/width_icon.png" id="9_2mk5m"]
[ext_resource type="Texture2D" uid="uid://bmh1op1r54xtx" path="res://checksfinder/ui/graphics/bomb.png" id="10_pofn2"]
[ext_resource type="Theme" uid="uid://cc8k6b5sq7rg3" path="res://checksfinder/ui/themes/lightgreenborder_topleft.tres" id="11_npbh7"]
[ext_resource type="PackedScene" uid="uid://byqp3jea6xq5w" path="res://checksfinder/ui/themes/button_wrapper.tscn" id="11_xwlk7"]
[ext_resource type="Theme" uid="uid://dxdkrilr8iug8" path="res://checksfinder/ui/themes/darkgreenborder_bottomright.tres" id="12_2mk5m"]
[ext_resource type="AudioStream" uid="uid://byxudx157vjax" path="res://checksfinder/audio/digright.wav" id="14_2mk5m"]
[ext_resource type="Theme" uid="uid://dh7h45h5vj3xh" path="res://checksfinder/ui/themes/empty.tres" id="14_xwlk7"]
[ext_resource type="Script" uid="uid://c84vn3k22tq32" path="res://checksfinder/victory_screen.gd" id="15_hynhs"]
[ext_resource type="AudioStream" uid="uid://cfvfbn4ktlec7" path="res://checksfinder/audio/explosion.wav" id="15_n7jtk"]
[ext_resource type="AudioStream" uid="uid://tqbe3svfo3lj" path="res://checksfinder/audio/win.wav" id="16_bvoa7"]

[sub_resource type="Theme" id="Theme_2mk5m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7jtk"]
bg_color = Color(0.141176, 0.345098, 0.141176, 1)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.141176, 0.345098, 0.141176, 1)
corner_detail = 1

[node name="GameScene" type="PanelContainer" node_paths=PackedStringArray("dig_sound", "explosion_sound", "generic_win_sound", "InLogic", "CompletedChecks", "CurrentBombs", "CurrentMaxBombs", "CurrentHeight", "CurrentMaxHeight", "CurrentWidth", "CurrentMaxWidth", "MarkedMines", "TotalCurrentMines", "DisconnectScreen", "VictoryScreen", "game_grid")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1rejh")
script = ExtResource("2_5n5vg")
dig_sound = NodePath("DigSound")
explosion_sound = NodePath("Explosion")
generic_win_sound = NodePath("GenericWin")
InLogic = NodePath("HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer/InLogic")
CompletedChecks = NodePath("HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer/CompletedChecks")
CurrentBombs = NodePath("HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer/CurrentBombs")
CurrentMaxBombs = NodePath("HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer/CurrentMaxBombs")
CurrentHeight = NodePath("HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer/CurrentHeight")
CurrentMaxHeight = NodePath("HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer/CurrentMaxHeight")
CurrentWidth = NodePath("HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer/CurrentWidth")
CurrentMaxWidth = NodePath("HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer/CurrentMaxWidth")
MarkedMines = NodePath("HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer/HBoxContainer/MarkedMineCount")
TotalCurrentMines = NodePath("HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer/HBoxContainer/TotalMineCount")
DisconnectScreen = NodePath("DisconnectScreen")
VictoryScreen = NodePath("VictoryScreen")
game_grid = NodePath("HBoxContainer/GameGrid")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="GameGrid" type="GridContainer" parent="HBoxContainer" node_paths=PackedStringArray("game_scene")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme = SubResource("Theme_2mk5m")
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 5
script = ExtResource("3_77tm3")
game_scene = NodePath("../..")

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_n7jtk")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VolumeContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VolumeContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/VolumeContainer" instance=ExtResource("4_2mk5m")]
layout_mode = 2

[node name="LocationCountContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer"]
layout_mode = 2
tooltip_text = "Amount of checks you have to do |
Amount of completed locations /
Total amount of locations"

[node name="Icon2" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("5_333wg")
stretch_mode = 5

[node name="InLogic" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Icon" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6_frkbr")
stretch_mode = 5

[node name="CompletedChecks" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="AllChecks" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/LocationCountContainer/HBoxContainer"]
layout_mode = 2
text = "25"

[node name="BombCountContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer"]
layout_mode = 2
tooltip_text = "Amount of Map Bombs accessible for current check /
Amount of Map Bombs items you received /
Total amount of Map Bomb items in multiworld"

[node name="Icon" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("7_verhn")
stretch_mode = 5

[node name="CurrentBombs" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="CurrentMaxBombs" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash2" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="TotalBombs" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/BombCountContainer/HBoxContainer"]
layout_mode = 2
text = "20"

[node name="HeightCountContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer"]
layout_mode = 2
tooltip_text = "Amount of Map Height items accessible for current check /
 Amount of Map Height items you received /
Total amount of Map Height items in multiworld"

[node name="Icon" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("8_npbh7")
stretch_mode = 5

[node name="CurrentHeight" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="CurrentMaxHeight" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash2" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="TotalHeight" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/HeightCountContainer/HBoxContainer"]
layout_mode = 2
text = "10"

[node name="WidthCountContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer"]
layout_mode = 2
tooltip_text = "Amount of Map Width items accessible for current check /
Amount of Map Width items you received /
Total amount of Map Width items in multiworld"

[node name="Icon" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("9_2mk5m")
stretch_mode = 5

[node name="CurrentWidth" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="CurrentMaxWidth" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash2" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="TotalWidth" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/WidthCountContainer/HBoxContainer"]
layout_mode = 2
text = "10"

[node name="MinesOnBoardCountContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer"]
layout_mode = 2
tooltip_text = "Amount of mines you marked (whether correctly or not) /
Total amount of mines on the current board"

[node name="Icon" type="TextureRect" parent="HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("10_pofn2")
stretch_mode = 5

[node name="MarkedMineCount" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Slash" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="TotalMineCount" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer/MinesOnBoardCountContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="Control" type="Control" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExitContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit" parent="HBoxContainer/PanelContainer/VBoxContainer/ExitContainer" instance=ExtResource("11_xwlk7")]
layout_mode = 2
button_text = "Exit"

[node name="DisconnectScreen" type="PanelContainer" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="DisconnectScreen"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="DisconnectScreen/CenterContainer"]
layout_mode = 2
theme = ExtResource("11_npbh7")

[node name="PanelContainer" type="PanelContainer" parent="DisconnectScreen/CenterContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("12_2mk5m")

[node name="VBoxContainer" type="VBoxContainer" parent="DisconnectScreen/CenterContainer/PanelContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="DisconnectScreen/CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1rejh")

[node name="DISCONNECTED" type="Label" parent="DisconnectScreen/CenterContainer/PanelContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "DISCONNECTED"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="DisconnectScreen/CenterContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1rejh")

[node name="instructions" type="Label" parent="DisconnectScreen/CenterContainer/PanelContainer/PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Please open console via CTRL+Q and reconnect"

[node name="VictoryScreen" type="PanelContainer" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2

[node name="Button" type="Button" parent="VictoryScreen"]
layout_mode = 2
theme = ExtResource("14_xwlk7")
script = ExtResource("15_hynhs")

[node name="CenterContainer" type="CenterContainer" parent="VictoryScreen"]
layout_mode = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="VictoryScreen/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("11_npbh7")

[node name="PanelContainer" type="PanelContainer" parent="VictoryScreen/CenterContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("12_2mk5m")

[node name="PanelContainer" type="PanelContainer" parent="VictoryScreen/CenterContainer/PanelContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("1_1rejh")

[node name="Label" type="Label" parent="VictoryScreen/CenterContainer/PanelContainer/PanelContainer/PanelContainer"]
layout_mode = 2
text = "YOU WIN"

[node name="DigSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_2mk5m")
bus = &"Sound Effects"

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_n7jtk")
bus = &"Sound Effects"

[node name="GenericWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_bvoa7")
bus = &"Sound Effects"

[connection signal="game_grid_sound" from="HBoxContainer/GameGrid" to="." method="_on_game_grid_sound"]
[connection signal="updated_marked_mines" from="HBoxContainer/GameGrid" to="." method="_on_updated_marked_mines"]
[connection signal="wrapped_button_pressed" from="HBoxContainer/PanelContainer/VBoxContainer/ExitContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VictoryScreen/Button" to="VictoryScreen/Button" method="_on_pressed"]
